--- a/code.html
+++ b/code.html
@@ -1,41 +1,35 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-
-  <body>
-    <section class="calculator">
-      <form>
-        <input type="text" class="screen" />
-      </form>
-      <div class="buttons">
-
-        <button type="button" class="btn btn-yellow" data-num="*">*</button>
-        <button type="button" class="btn btn-yellow" data-num="/">/</button>
-        <button type="button" class="btn btn-yellow" data-num="-">-</button>
-        <button type="button" class="btn btn-yellow" data-num="+">+</button>
-
-        <button type="button" class="btn btn-grey" data-num=".">.</button>
-        <button type="button" class="btn btn-grey" data-num="9">9</button>
-        <button type="button" class="btn btn-grey" data-num="8">8</button>
-        <button type="button" class="btn btn-grey" data-num="7">7</button>
-        <button type="button" class="btn btn-grey" data-num="6">6</button>
-        <button type="button" class="btn btn-grey" data-num="5">5</button>
-        <button type="button" class="btn btn-grey" data-num="4">4</button>
-        <button type="button" class="btn btn-grey" data-num="3">3</button>
-        <button type="button" class="btn btn-grey" data-num="2">2</button>
-        <button type="button" class="btn btn-grey" data-num="1">1</button>
-        <button type="button" class="btn btn-grey" data-num="0">0</button>
-        <button type="button" class="btn-equal btn-grey">=</button>
-        <button type="button" class="btn-clear btn-grey">C</button>
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Calculator</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section>
+        <div class="container">
+            <div id="display"></div>
+            <div class="buttons">
+              <div class="button">*</div>
+              <div class="button">/</div>
+              <div class="button">-</div>
+              <div class="button">+</div>
+              <div class="button">.</div>
+              <div class="button">9</div>
+              <div class="button">8</div>
+              <div class="button">7</div>
+              <div class="button">6</div>
+              <div class="button">5</div>
+              <div class="button">4</div>
+              <div class="button">3</div>
+              <div class="button">2</div>
+              <div class="button">1</div>
+              <div class="button">0</div>
+              <div id="equal" class="button">=</div>
+                <div class="button">C</div>
+                </div>
+        </div>
     </section>
-
-    <script src="./code.js"></script>
-  </body>
+    <script src="/code.js"></script>
+</body>
 </html>
